compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__provide_one_arg_type_to_two_args_fn.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n   let a = #(1,2)\n   fn(x, y) { x.0 + y.1 }(a)\n}\n"
---
error: Incorrect arity
  ┌─ /src/one/two.gleam:4:4
  │
4 │    fn(x, y) { x.0 + y.1 }(a)
  │    ^^^^^^^^^^^^^^^^^^^^^^^^^ Expected 2 arguments, got 1


error: Type mismatch
  ┌─ /src/one/two.gleam:4:15
  │
4 │    fn(x, y) { x.0 + y.1 }(a)
  │               ^ What type is this?

To index into a tuple we need to know it size, but we don't know
anything about this type yet. Please add some type annotations so
we can continue.
