compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__unlabelled_after_labelled.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "fn main(wibble wibber, wobber) {\n  Nil\n}"
---
----- SOURCE CODE
fn main(wibble wibber, wobber) {
  Nil
}

----- ERROR
error: Unlabelled argument after labelled argument
  ┌─ /src/one/two.gleam:1:24
  │
1 │ fn main(wibble wibber, wobber) {
  │                        ^^^^^^

All unlabelled arguments must come before any labelled arguments.
