compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__unused_function_body.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\n@external(javascript, \"foo\", \"bar\")\n@external(erlang, \"foo\", \"bar\")\npub fn foo() -> Int {\n  // This is dead code since there already is an\n  // external implementation for all targets.\n  11\n}"
---

warning: Unused function body.
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ pub fn foo() -> Int {
  │ ^^^^^^^^^^^^^^^^^^^

The function already has external implementations for all targets.
Hint: Remove the body of this function or @external attributes.

